# WibblyWobbly

./: README.md  README.rst  Tutorial.ipynb  pyproject.toml  requirements.txt  setup.cfg  setup.py
tests/: example_dirty_name.csv  example_dirty_taxa.csv  example_taxa.csv  test_core.py
wibblywobbly/: __init__.py  core.py  helpers.py  hierarchical.py  infer_catalog.py  map_list_to_catalog.py
