[metadata]
name = wibblywobbly
version = 0.0.2
author = ME Martinez-Sanchez
author_email = mar.esther23+wibblywobbly@gmail.com
description = Python library to create equivalence dictionaries between a set of texts and a catalog using Levenshtein distance. 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mar-esther23/WibblyWobbly/
project_urls =
    Bug Tracker = https://github.com/mar-esther23/WibblyWobbly/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
